# web_app_sentiment_analyzer

./: README.md  app.py  launcher.py  pyproject.toml  requirements.txt  sql_app.db
sql_app/: crud.py  database.py  main.py  models.py  preprocessing.py  schemas.py  sentiment_analysis.py
