[tool.poetry]
name = "twitter-analysis-2"
version = "0.1.0"
description = ""
authors = ["kizataka <chongxiongmu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.27.0"
sqlalchemy = "^2.0.21"
fastapi = "^0.103.1"
transformers = "^4.33.3"
uvicorn = "^0.23.2"
torch = "^2.0.1"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
